Gumbo recipe completed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-        <a href="recipes/recipename.html">Good New Orleans Creole Gumbo</a>">
+        <a href="recipes/gumbo.html">Good New Orleans Creole Gumbo</a>">
         Good New Orleans Creole Gumbo</a>
         
 </body>
