--- a/recipes/gumbo.html
+++ b/recipes/gumbo.html
@@ -7,6 +7,17 @@
 </head>
 <body>
     <h1>Good New Orleans Creole Gumbo</h1>
-    <img src="https://www.allrecipes.com/thmb/pjNQsZPU74In57w_RP3KuCugM48=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/216888-good-new-orleans-creole-gumbo-DDMFS-4x3-573c0eb9f4584d92a0bd2b4e4065022a.jpg" alt="New Orleans Gumbo"> 
+
+    <img src="https://www.allrecipes.com/thmb/pjNQsZPU74In57w_RP3KuCugM48=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/216888-good-new-orleans-creole-gumbo-DDMFS-4x3-573c0eb9f4584d92a0bd2b4e4065022a.jpg" alt="New Orleans Gumbo">
+
+    <h2>Description</h2>
+    <p>New Orleans Gumbo is one of my personal-favorites. The dish not only has limitless variety, but it is a true sign of skill and a labor of love. Make sure you have extremem patience when preparing your roux. Once that flour is in the pot, <em>you don't leave that pot</em>.</p>
+    <h3>Directions</h3>
+    <ol>
+        <li>Prepare the Gumbo</li>
+        <li>Cook the Gumbo</li>
+        <li>Eat the Gumbo</li>
+        <li><strong>WORSHIP THE GUMBO!</strong></li>
+    </ol>
 </body>
 </html>
